apps/spliit/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spliit
  namespace: default
spec:
  selector:
    app: spliit
  ports:
    - protocol: TCP
      port: 3000
      targetPort: http
  type: ClusterIP
